--- a/grid.css
+++ b/grid.css
@@ -1,6 +1,6 @@
 h1 {
   color: green;
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
 body {
@@ -14,6 +14,11 @@ body {
 }
 
 td {
-  width: 175px;
-  height: 175px;
+  width: 160px;
+  height: 160px;
+}
+
+td button {
+  width: 160px;
+  height: 160px;
 }
