--- a/grid.css
+++ b/grid.css
@@ -1,5 +1,5 @@
 h1 {
-  color: green;
+  color: yellowgreen;
   font-size: 3.5rem;
 }
 
@@ -24,5 +24,5 @@ td button {
 }
 
 .category {
-  font-size: 20px;
+  font-size: 30px;
 }
