--- a/grid.css
+++ b/grid.css
@@ -1,5 +1,5 @@
 h1 {
-  color: yellowgreen;
+  color: green;
   font-size: 3.5rem;
 }
 
@@ -11,6 +11,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   border: 2px solid black;
+  flex: 1;
 }
 
 td {
@@ -28,5 +29,9 @@ td button {
 }
 
 .rightSide {
-  float: right;
+  flex: 0 0 auto
+}
+
+.flex-container {
+  display: flex;
 }
