--- a/grid.css
+++ b/grid.css
@@ -1,5 +1,5 @@
 h1 {
-  color: green;
+  color: yellowgreen;
   font-size: 3.5rem;
 }
 
@@ -11,7 +11,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   border: 2px solid black;
-  flex: 1;
 }
 
 td {
@@ -26,12 +25,4 @@ td button {
 
 .category {
   font-size: 30px;
-}
-
-.rightSide {
-  flex: 0 0 auto
-}
-
-.flex-container {
-  display: flex;
 }
