--- a/grid.css
+++ b/grid.css
@@ -60,13 +60,14 @@ td button {
 }
 
 .form-container .btn {
-  background-color: #04AA6D;
+  background-color: yellowgreen;
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
   width: 100%;
   margin-bottom: 10px;
+  margin-top: 20px;
   opacity: 0.8;
 }
 
