--- a/grid.css
+++ b/grid.css
@@ -1,5 +1,5 @@
 h1 {
-  color: yellowgreen;
+  color: green;
   font-size: 3.5rem;
 }
 
@@ -38,14 +38,14 @@ td button {
   z-index: 9;
 }
 
-.form-container {
+.form-popup {
   max-width: 300px;
   padding: 10px;
   background-color: white;
 }
 
-.form-container input[type=text],
-.form-container input[type=password] {
+.form-popup input[type=text],
+.form-popup input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -53,13 +53,13 @@ td button {
   background: #f1f1f1;
 }
 
-.form-container input[type=text]:focus,
-.form-container input[type=password]:focus {
+.form-popup input[type=text]:focus,
+.form-popup input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
 
-.form-container .btn {
+.form-popup .btn {
   background-color: green;
   color: white;
   padding: 16px 20px;
@@ -71,10 +71,10 @@ td button {
   opacity: 0.8;
 }
 
-.form-container .cancel {
+.form-popup .cancel {
   background-color: red;
 }
 
-.form-container .btn:hover {
+.form-popup .btn:hover {
   opacity: 1;
 }
