--- a/grid.css
+++ b/grid.css
@@ -13,6 +13,7 @@ body {
   margin-right: auto;
   border: 2px solid black;
   background: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 td {
